erDiagram
	direction TB
	MANAGERS {
		int manager_id PK "AUTO_INCREMENT" 
		varchar(50) first_name  "NOT NULL"
		varchar(50) last_name "NOT NULL"
		varchar(50) work_schedule  "NOT NULL"
		varchar(50) email "NOT NULL"
		varchar(20) contact_number  "NULLABLE"  
		enum manager_status  "NOT NULL"  
		date created_at  "TIMESTAMPZ"
	}

	CASHIERS {
		int cashier_id PK "AUTO_INCREMENT"  
		varchar(50) first_name "NOT NULL"
		varchar(50) last_name "NOT NULL"
		varchar(50) email "NOT NULL"
		varchar(20) contact_number  "NULLABLE"  
		varchar(50) work_schedule  "NOT NULL"  
		int manager_id FK "NOT NULL"  
		enum status  "NOT NULL"  
		date created_at  "TIMESTAMPZ"  
	}

	INVENTORY_STAFF {
		int staff_id PK "AUTO_INCREMENT"
		varchar(50) first_name "NOT NULL"
		varchar(50) last_name "NOT NULL"
		varchar(50) email "NOT NULL"
		varchar(20) contact_number  "NULLABLE"  
		int manager_id FK "NOT NULL"  
		enum status  "NOT NULL"  
		varchar(50) work_schedule  "NOT NULL"
		date created_at "TIMESTAMPZ"
	}

	CUSTOMERS {
		int customer_id PK "AUTO_INCREMENT"  
		varchar(50) first_name  "NOT NULL"
		varchar(50) last_name "NOT NULL"
		varchar(50) university_id  "UNIQUE, NULLABLE"  
		varchar(20) contact_number  "NULLABLE"
		varchar(20) email "NOT NULL"
		date created_at "TIMESTAMPZ"
	}

	PRODUCTS {
		int product_id PK "AUTO_INCREMENT"  
		varchar(100) product_name  "NOT NULL"  
		text description  "NULLABLE"  
		decimal_10_2 price  "NOT NULL, CHECK (price >= 0)"  
		varchar(50) category  "NOT NULL"  
		boolean is_available  "DEFAULT TRUE"
		date created_at "TIMESTAMPZ"
	}

	INGREDIENTS {
		int ingredient_id PK "AUTO_INCREMENT"  
		varchar(100) ingredient_name  "NOT NULL"  
		varchar(20) unit_of_measure  "NOT NULL"  
		decimal_10_2 current_quantity  "DEFAULT 0.00"  
		decimal_10_2 minimum_stock_level  "DEFAULT 0.00"  
	}

	PRODUCT_INGREDIENTS {
		int product_id PK,FK "ON DELETE CASCADE"  
		int ingredient_id PK,FK "ON DELETE CASCADE"  
		decimal_10_2 quantity_required  "NOT NULL"  
	}

	SUPPLIER_INGREDIENTS {
		int supplier_id PK,FK "ON DELETE CASCADE"  
		int ingredient_id PK,FK "ON DELETE CASCADE"  
	}

	DELIVERIES {
		int delivery_id PK "AUTO_INCREMENT"  
		int supplier_id FK "NOT NULL"  
		date delivery_date  "NOT NULL"  
	}

	DELIVERY_ITEMS {
		int delivery_id PK,FK "ON DELETE CASCADE"  
		int ingredient_id PK,FK "ON DELETE CASCADE"  
		decimal_10_2 quantity_received  "NOT NULL"  
	}

	ORDERS {
		int order_id PK "AUTO_INCREMENT"  
		int customer_id FK "NOT NULL"  
		int cashier_id FK "NOT NULL"  
		date order_date  "NOT NULL"  
		time order_time  "NOT NULL"  
		decimal_10_2 total_amount  "DEFAULT 0.00"  
		varchar(50) order_status  "NOT NULL"  
	}

	ORDER_ITEMS {
		int order_item_id PK "AUTO_INCREMENT"  
		int order_id FK "NOT NULL"  
		int product_id FK "NOT NULL"  
		int quantity  "NOT NULL"  
		decimal_10_2 selling_price  "NOT NULL"  
	}

	PAYMENTS {
		int order_id FK "NOT NULL"  
		date payment_date  "NOT NULL"  
		decimal_10_2 amount_paid  "NOT NULL"  
		varchar(50) payment_method  "NOT NULL"  
	}

	MANAGERS||--o{CASHIERS:"manages"
	MANAGERS||--o{INVENTORY_STAFF:"manages"
	CUSTOMERS||--o{ORDERS:"places"
	CASHIERS||--o{ORDERS:"processes"
	ORDERS||--|{ORDER_ITEMS:"includes"
	PRODUCTS||--|{ORDER_ITEMS:"appears in"
	ORDERS||--||PAYMENTS:"composed of"
	
	PRODUCTS||--|{PRODUCT_INGREDIENTS:"has"
	INGREDIENTS||--|{PRODUCT_INGREDIENTS:"uses"
	INGREDIENTS||--o{SUPPLIER_INGREDIENTS:"supplied"
	DELIVERIES||--|{DELIVERY_ITEMS:"contains"
	INGREDIENTS||--o{DELIVERY_ITEMS:"restocks"

	MANAGERS:::pinkBox
	CASHIERS:::cyanBox
	INVENTORY_STAFF:::orangeBox
	CUSTOMERS:::greenBox
	PRODUCTS:::lightBlueBox
	INGREDIENTS:::cyanBox
	PRODUCT_INGREDIENTS:::greenBox
	SUPPLIER_INGREDIENTS:::redBox
	DELIVERIES:::pinkBox
	DELIVERY_ITEMS:::pinkBox
	ORDERS:::lightBlueBox
	ORDER_ITEMS:::yellowBox
	PAYMENTS:::redBox